debug/parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> statement
Rule 2     program -> program statement
Rule 3     statement -> command
Rule 4     statement -> INT command
Rule 5     command -> WRITE LPAREN optionsIO RPAREN varlist
Rule 6     command -> SUBROUTINE ID LPAREN varlist RPAREN
Rule 7     command -> STOP stopOption
Rule 8     command -> RETURN
Rule 9     command -> READ readOption
Rule 10    command -> REAL exprlist
Rule 11    command -> PAUSE pauseOption
Rule 12    command -> INTEGER exprlist
Rule 13    command -> IF LPAREN relexpr RPAREN ifOption
Rule 14    command -> GOTO gotoOption
Rule 15    command -> FUNCTION ID LPAREN varlist RPAREN
Rule 16    command -> FORMAT LPAREN formatOption RPAREN
Rule 17    command -> END
Rule 18    command -> DO doOption
Rule 19    command -> DIMMENSION dimmensionOption
Rule 20    command -> DATA dataOption
Rule 21    command -> CONTINUE
Rule 22    command -> CALL callOption
Rule 23    command -> variable ASSIGN expr
Rule 24    variable -> ID
Rule 25    variable -> ID LPAREN expr RPAREN
Rule 26    variable -> ID LPAREN expr , expr RPAREN
Rule 27    varlist -> variable
Rule 28    varlist -> varlist , variable  [precedence=left, level=9]
Rule 29    number -> MINUS RREAL  [precedence=right, level=6]
Rule 30    number -> MINUS INT  [precedence=right, level=6]
Rule 31    number -> RREAL
Rule 32    number -> INT
Rule 33    expr -> variable
Rule 34    expr -> RREAL
Rule 35    expr -> INT
Rule 36    expr -> LPAREN expr RPAREN
Rule 37    expr -> MINUS expr  [precedence=right, level=6]
Rule 38    expr -> expr EXPONENT expr  [precedence=left, level=4]
Rule 39    expr -> expr DIVIDE expr  [precedence=left, level=3]
Rule 40    expr -> expr TIMES expr  [precedence=left, level=3]
Rule 41    expr -> expr MINUS expr  [precedence=left, level=2]
Rule 42    expr -> expr PLUS expr  [precedence=left, level=2]
Rule 43    exprlist -> expr
Rule 44    exprlist -> exprlist , expr  [precedence=left, level=9]
Rule 45    relexpr -> NOT relexpr  [precedence=right, level=7]
Rule 46    relexpr -> relexpr OR relexpr  [precedence=left, level=8]
Rule 47    relexpr -> relexpr AND relexpr  [precedence=left, level=8]
Rule 48    relexpr -> expr NE expr  [precedence=nonassoc, level=1]
Rule 49    relexpr -> expr EQ expr  [precedence=nonassoc, level=1]
Rule 50    relexpr -> expr GE expr  [precedence=nonassoc, level=1]
Rule 51    relexpr -> expr GT expr  [precedence=nonassoc, level=1]
Rule 52    relexpr -> expr LE expr  [precedence=nonassoc, level=1]
Rule 53    relexpr -> expr LT expr  [precedence=nonassoc, level=1]
Rule 54    callOption -> EXIT callExit
Rule 55    callOption -> ID LPAREN idList RPAREN
Rule 56    callExit -> empty
Rule 57    callExit -> LPAREN INT RPAREN
Rule 58    idList -> ID
Rule 59    idList -> idList , ID
Rule 60    dataOption -> varlist / datalist /  [precedence=left, level=5]
Rule 61    dataOption -> dataOption , varlist / datalist /  [precedence=left, level=5]
Rule 62    datalist -> number
Rule 63    datalist -> INT * number  [precedence=left, level=5]
Rule 64    datalist -> datalist , number  [precedence=left, level=9]
Rule 65    datalist -> datalist , INT * number  [precedence=left, level=5]
Rule 66    dimmensionOption -> ID LPAREN intlist RPAREN
Rule 67    dimmensionOption -> dimmensionOption , ID LPAREN intlist RPAREN
Rule 68    intlist -> INT
Rule 69    intlist -> intlist , INT
Rule 70    doOption -> INT variable ASSIGN INT , INT
Rule 71    doOption -> INT variable ASSIGN INT , INT , INT
Rule 72    formatOption -> empty
Rule 73    formatOption -> string
Rule 74    formatOption -> conversion
Rule 75    formatOption -> LPAREN formatOption RPAREN
Rule 76    formatOption -> INT LPAREN formatOption RPAREN
Rule 77    formatOption -> formatOption / formatOption  [precedence=left, level=5]
Rule 78    formatOption -> formatOption , formatOption  [precedence=left, level=9]
Rule 79    conversion -> ID string
Rule 80    conversion -> ID INT
Rule 81    conversion -> ID INT . INT
Rule 82    conversion -> INT ID
Rule 83    string -> HSTRING
Rule 84    string -> STRING
Rule 85    gotoOption -> LPAREN intlist RPAREN , variable  [precedence=left, level=9]
Rule 86    gotoOption -> ID
Rule 87    gotoOption -> INT
Rule 88    ifOption -> ifValue , ifValue , ifValue  [precedence=left, level=9]
Rule 89    ifValue -> ID
Rule 90    ifValue -> INT
Rule 91    pauseOption -> empty
Rule 92    pauseOption -> INT
Rule 93    stopOption -> empty
Rule 94    stopOption -> INT
Rule 95    readOption -> LPAREN optionsIO RPAREN empty
Rule 96    readOption -> LPAREN optionsIO RPAREN varlist
Rule 97    optionsIO -> INT ' *  [precedence=left, level=5]
Rule 98    optionsIO -> INT , *  [precedence=left, level=5]
Rule 99    optionsIO -> ID ' INT
Rule 100   optionsIO -> ID , INT
Rule 101   optionsIO -> INT ' INT
Rule 102   optionsIO -> INT , INT
Rule 103   empty -> <empty>

Terminals, with rules where they appear:

'                    : 97 99 101
*                    : 63 65 97 98
,                    : 26 28 44 59 61 64 65 67 69 70 71 71 78 85 88 88 98 100 102
.                    : 81
/                    : 60 60 61 61 77
AND                  : 47
ASSIGN               : 23 70 71
CALL                 : 22
CONTINUE             : 21
DATA                 : 20
DIMMENSION           : 19
DIVIDE               : 39
DO                   : 18
END                  : 17
EQ                   : 49
EXIT                 : 54
EXPONENT             : 38
FORMAT               : 16
FUNCTION             : 15
GE                   : 50
GOTO                 : 14
GT                   : 51
HSTRING              : 83
ID                   : 6 15 24 25 26 55 58 59 66 67 79 80 81 82 86 89 99 100
IF                   : 13
INT                  : 4 30 32 35 57 63 65 68 69 70 70 70 71 71 71 71 76 80 81 81 82 87 90 92 94 97 98 99 100 101 101 102 102
INTEGER              : 12
LE                   : 52
LPAREN               : 5 6 13 15 16 25 26 36 55 57 66 67 75 76 85 95 96
LT                   : 53
MINUS                : 29 30 37 41
NE                   : 48
NOT                  : 45
OR                   : 46
PAUSE                : 11
PLUS                 : 42
READ                 : 9
REAL                 : 10
RETURN               : 8
RPAREN               : 5 6 13 15 16 25 26 36 55 57 66 67 75 76 85 95 96
RREAL                : 29 31 34
STOP                 : 7
STRING               : 84
SUBROUTINE           : 6
TIMES                : 40
WRITE                : 5
error                : 

Nonterminals, with rules where they appear:

callExit             : 54
callOption           : 22
command              : 3 4
conversion           : 74
dataOption           : 20 61
datalist             : 60 61 64 65
dimmensionOption     : 19 67
doOption             : 18
empty                : 56 72 91 93 95
expr                 : 23 25 26 26 36 37 38 38 39 39 40 40 41 41 42 42 43 44 48 48 49 49 50 50 51 51 52 52 53 53
exprlist             : 10 12 44
formatOption         : 16 75 76 77 77 78 78
gotoOption           : 14
idList               : 55 59
ifOption             : 13
ifValue              : 88 88 88
intlist              : 66 67 69 85
number               : 62 63 64 65
optionsIO            : 5 95 96
pauseOption          : 11
program              : 2 0
readOption           : 9
relexpr              : 13 45 46 46 47 47
statement            : 1 2
stopOption           : 7
string               : 73 79
variable             : 23 27 28 33 70 71 85
varlist              : 5 6 15 28 60 61 96


state 0

    (0) S' -> . program
    (1) program -> . statement
    (2) program -> . program statement
    (3) statement -> . command
    (4) statement -> . INT command
    (5) command -> . WRITE LPAREN optionsIO RPAREN varlist
    (6) command -> . SUBROUTINE ID LPAREN varlist RPAREN
    (7) command -> . STOP stopOption
    (8) command -> . RETURN
    (9) command -> . READ readOption
    (10) command -> . REAL exprlist
    (11) command -> . PAUSE pauseOption
    (12) command -> . INTEGER exprlist
    (13) command -> . IF LPAREN relexpr RPAREN ifOption
    (14) command -> . GOTO gotoOption
    (15) command -> . FUNCTION ID LPAREN varlist RPAREN
    (16) command -> . FORMAT LPAREN formatOption RPAREN
    (17) command -> . END
    (18) command -> . DO doOption
    (19) command -> . DIMMENSION dimmensionOption
    (20) command -> . DATA dataOption
    (21) command -> . CONTINUE
    (22) command -> . CALL callOption
    (23) command -> . variable ASSIGN expr
    (24) variable -> . ID
    (25) variable -> . ID LPAREN expr RPAREN
    (26) variable -> . ID LPAREN expr , expr RPAREN
    INT             shift and go to state 4
    WRITE           shift and go to state 5
    SUBROUTINE      shift and go to state 6
    STOP            shift and go to state 8
    RETURN          shift and go to state 9
    READ            shift and go to state 10
    REAL            shift and go to state 11
    PAUSE           shift and go to state 12
    INTEGER         shift and go to state 13
    IF              shift and go to state 14
    GOTO            shift and go to state 15
    FUNCTION        shift and go to state 16
    FORMAT          shift and go to state 17
    END             shift and go to state 18
    DO              shift and go to state 19
    DIMMENSION      shift and go to state 20
    DATA            shift and go to state 21
    CONTINUE        shift and go to state 22
    CALL            shift and go to state 23
    ID              shift and go to state 7

    program                        shift and go to state 1
    statement                      shift and go to state 2
    command                        shift and go to state 3
    variable                       shift and go to state 24

state 1

    (0) S' -> program .
    (2) program -> program . statement
    (3) statement -> . command
    (4) statement -> . INT command
    (5) command -> . WRITE LPAREN optionsIO RPAREN varlist
    (6) command -> . SUBROUTINE ID LPAREN varlist RPAREN
    (7) command -> . STOP stopOption
    (8) command -> . RETURN
    (9) command -> . READ readOption
    (10) command -> . REAL exprlist
    (11) command -> . PAUSE pauseOption
    (12) command -> . INTEGER exprlist
    (13) command -> . IF LPAREN relexpr RPAREN ifOption
    (14) command -> . GOTO gotoOption
    (15) command -> . FUNCTION ID LPAREN varlist RPAREN
    (16) command -> . FORMAT LPAREN formatOption RPAREN
    (17) command -> . END
    (18) command -> . DO doOption
    (19) command -> . DIMMENSION dimmensionOption
    (20) command -> . DATA dataOption
    (21) command -> . CONTINUE
    (22) command -> . CALL callOption
    (23) command -> . variable ASSIGN expr
    (24) variable -> . ID
    (25) variable -> . ID LPAREN expr RPAREN
    (26) variable -> . ID LPAREN expr , expr RPAREN
    INT             shift and go to state 4
    WRITE           shift and go to state 5
    SUBROUTINE      shift and go to state 6
    STOP            shift and go to state 8
    RETURN          shift and go to state 9
    READ            shift and go to state 10
    REAL            shift and go to state 11
    PAUSE           shift and go to state 12
    INTEGER         shift and go to state 13
    IF              shift and go to state 14
    GOTO            shift and go to state 15
    FUNCTION        shift and go to state 16
    FORMAT          shift and go to state 17
    END             shift and go to state 18
    DO              shift and go to state 19
    DIMMENSION      shift and go to state 20
    DATA            shift and go to state 21
    CONTINUE        shift and go to state 22
    CALL            shift and go to state 23
    ID              shift and go to state 7

    statement                      shift and go to state 25
    command                        shift and go to state 3
    variable                       shift and go to state 24

state 2

    (1) program -> statement .
    INT             reduce using rule 1 (program -> statement .)
    WRITE           reduce using rule 1 (program -> statement .)
    SUBROUTINE      reduce using rule 1 (program -> statement .)
    STOP            reduce using rule 1 (program -> statement .)
    RETURN          reduce using rule 1 (program -> statement .)
    READ            reduce using rule 1 (program -> statement .)
    REAL            reduce using rule 1 (program -> statement .)
    PAUSE           reduce using rule 1 (program -> statement .)
    INTEGER         reduce using rule 1 (program -> statement .)
    IF              reduce using rule 1 (program -> statement .)
    GOTO            reduce using rule 1 (program -> statement .)
    FUNCTION        reduce using rule 1 (program -> statement .)
    FORMAT          reduce using rule 1 (program -> statement .)
    END             reduce using rule 1 (program -> statement .)
    DO              reduce using rule 1 (program -> statement .)
    DIMMENSION      reduce using rule 1 (program -> statement .)
    DATA            reduce using rule 1 (program -> statement .)
    CONTINUE        reduce using rule 1 (program -> statement .)
    CALL            reduce using rule 1 (program -> statement .)
    ID              reduce using rule 1 (program -> statement .)
    $end            reduce using rule 1 (program -> statement .)


state 3

    (3) statement -> command .
    INT             reduce using rule 3 (statement -> command .)
    WRITE           reduce using rule 3 (statement -> command .)
    SUBROUTINE      reduce using rule 3 (statement -> command .)
    STOP            reduce using rule 3 (statement -> command .)
    RETURN          reduce using rule 3 (statement -> command .)
    READ            reduce using rule 3 (statement -> command .)
    REAL            reduce using rule 3 (statement -> command .)
    PAUSE           reduce using rule 3 (statement -> command .)
    INTEGER         reduce using rule 3 (statement -> command .)
    IF              reduce using rule 3 (statement -> command .)
    GOTO            reduce using rule 3 (statement -> command .)
    FUNCTION        reduce using rule 3 (statement -> command .)
    FORMAT          reduce using rule 3 (statement -> command .)
    END             reduce using rule 3 (statement -> command .)
    DO              reduce using rule 3 (statement -> command .)
    DIMMENSION      reduce using rule 3 (statement -> command .)
    DATA            reduce using rule 3 (statement -> command .)
    CONTINUE        reduce using rule 3 (statement -> command .)
    CALL            reduce using rule 3 (statement -> command .)
    ID              reduce using rule 3 (statement -> command .)
    $end            reduce using rule 3 (statement -> command .)


state 4

    (4) statement -> INT . command
    (5) command -> . WRITE LPAREN optionsIO RPAREN varlist
    (6) command -> . SUBROUTINE ID LPAREN varlist RPAREN
    (7) command -> . STOP stopOption
    (8) command -> . RETURN
    (9) command -> . READ readOption
    (10) command -> . REAL exprlist
    (11) command -> . PAUSE pauseOption
    (12) command -> . INTEGER exprlist
    (13) command -> . IF LPAREN relexpr RPAREN ifOption
    (14) command -> . GOTO gotoOption
    (15) command -> . FUNCTION ID LPAREN varlist RPAREN
    (16) command -> . FORMAT LPAREN formatOption RPAREN
    (17) command -> . END
    (18) command -> . DO doOption
    (19) command -> . DIMMENSION dimmensionOption
    (20) command -> . DATA dataOption
    (21) command -> . CONTINUE
    (22) command -> . CALL callOption
    (23) command -> . variable ASSIGN expr
    (24) variable -> . ID
    (25) variable -> . ID LPAREN expr RPAREN
    (26) variable -> . ID LPAREN expr , expr RPAREN
    WRITE           shift and go to state 5
    SUBROUTINE      shift and go to state 6
    STOP            shift and go to state 8
    RETURN          shift and go to state 9
    READ            shift and go to state 10
    REAL            shift and go to state 11
    PAUSE           shift and go to state 12
    INTEGER         shift and go to state 13
    IF              shift and go to state 14
    GOTO            shift and go to state 15
    FUNCTION        shift and go to state 16
    FORMAT          shift and go to state 17
    END             shift and go to state 18
    DO              shift and go to state 19
    DIMMENSION      shift and go to state 20
    DATA            shift and go to state 21
    CONTINUE        shift and go to state 22
    CALL            shift and go to state 23
    ID              shift and go to state 7

    command                        shift and go to state 26
    variable                       shift and go to state 24

state 5

    (5) command -> WRITE . LPAREN optionsIO RPAREN varlist
    LPAREN          shift and go to state 27


state 6

    (6) command -> SUBROUTINE . ID LPAREN varlist RPAREN
    ID              shift and go to state 28


state 7

    (24) variable -> ID .
    (25) variable -> ID . LPAREN expr RPAREN
    (26) variable -> ID . LPAREN expr , expr RPAREN
    ASSIGN          reduce using rule 24 (variable -> ID .)
    EXPONENT        reduce using rule 24 (variable -> ID .)
    DIVIDE          reduce using rule 24 (variable -> ID .)
    TIMES           reduce using rule 24 (variable -> ID .)
    MINUS           reduce using rule 24 (variable -> ID .)
    PLUS            reduce using rule 24 (variable -> ID .)
    ,               reduce using rule 24 (variable -> ID .)
    INT             reduce using rule 24 (variable -> ID .)
    WRITE           reduce using rule 24 (variable -> ID .)
    SUBROUTINE      reduce using rule 24 (variable -> ID .)
    STOP            reduce using rule 24 (variable -> ID .)
    RETURN          reduce using rule 24 (variable -> ID .)
    READ            reduce using rule 24 (variable -> ID .)
    REAL            reduce using rule 24 (variable -> ID .)
    PAUSE           reduce using rule 24 (variable -> ID .)
    INTEGER         reduce using rule 24 (variable -> ID .)
    IF              reduce using rule 24 (variable -> ID .)
    GOTO            reduce using rule 24 (variable -> ID .)
    FUNCTION        reduce using rule 24 (variable -> ID .)
    FORMAT          reduce using rule 24 (variable -> ID .)
    END             reduce using rule 24 (variable -> ID .)
    DO              reduce using rule 24 (variable -> ID .)
    DIMMENSION      reduce using rule 24 (variable -> ID .)
    DATA            reduce using rule 24 (variable -> ID .)
    CONTINUE        reduce using rule 24 (variable -> ID .)
    CALL            reduce using rule 24 (variable -> ID .)
    ID              reduce using rule 24 (variable -> ID .)
    $end            reduce using rule 24 (variable -> ID .)
    /               reduce using rule 24 (variable -> ID .)
    RPAREN          reduce using rule 24 (variable -> ID .)
    NE              reduce using rule 24 (variable -> ID .)
    EQ              reduce using rule 24 (variable -> ID .)
    GE              reduce using rule 24 (variable -> ID .)
    GT              reduce using rule 24 (variable -> ID .)
    LE              reduce using rule 24 (variable -> ID .)
    LT              reduce using rule 24 (variable -> ID .)
    OR              reduce using rule 24 (variable -> ID .)
    AND             reduce using rule 24 (variable -> ID .)
    LPAREN          shift and go to state 29


state 8

    (7) command -> STOP . stopOption
    (93) stopOption -> . empty
    (94) stopOption -> . INT
    (103) empty -> .
  ! shift/reduce conflict for INT resolved as shift
    INT             shift and go to state 32
    WRITE           reduce using rule 103 (empty -> .)
    SUBROUTINE      reduce using rule 103 (empty -> .)
    STOP            reduce using rule 103 (empty -> .)
    RETURN          reduce using rule 103 (empty -> .)
    READ            reduce using rule 103 (empty -> .)
    REAL            reduce using rule 103 (empty -> .)
    PAUSE           reduce using rule 103 (empty -> .)
    INTEGER         reduce using rule 103 (empty -> .)
    IF              reduce using rule 103 (empty -> .)
    GOTO            reduce using rule 103 (empty -> .)
    FUNCTION        reduce using rule 103 (empty -> .)
    FORMAT          reduce using rule 103 (empty -> .)
    END             reduce using rule 103 (empty -> .)
    DO              reduce using rule 103 (empty -> .)
    DIMMENSION      reduce using rule 103 (empty -> .)
    DATA            reduce using rule 103 (empty -> .)
    CONTINUE        reduce using rule 103 (empty -> .)
    CALL            reduce using rule 103 (empty -> .)
    ID              reduce using rule 103 (empty -> .)
    $end            reduce using rule 103 (empty -> .)

    stopOption                     shift and go to state 30
    empty                          shift and go to state 31

state 9

    (8) command -> RETURN .
    INT             reduce using rule 8 (command -> RETURN .)
    WRITE           reduce using rule 8 (command -> RETURN .)
    SUBROUTINE      reduce using rule 8 (command -> RETURN .)
    STOP            reduce using rule 8 (command -> RETURN .)
    RETURN          reduce using rule 8 (command -> RETURN .)
    READ            reduce using rule 8 (command -> RETURN .)
    REAL            reduce using rule 8 (command -> RETURN .)
    PAUSE           reduce using rule 8 (command -> RETURN .)
    INTEGER         reduce using rule 8 (command -> RETURN .)
    IF              reduce using rule 8 (command -> RETURN .)
    GOTO            reduce using rule 8 (command -> RETURN .)
    FUNCTION        reduce using rule 8 (command -> RETURN .)
    FORMAT          reduce using rule 8 (command -> RETURN .)
    END             reduce using rule 8 (command -> RETURN .)
    DO              reduce using rule 8 (command -> RETURN .)
    DIMMENSION      reduce using rule 8 (command -> RETURN .)
    DATA            reduce using rule 8 (command -> RETURN .)
    CONTINUE        reduce using rule 8 (command -> RETURN .)
    CALL            reduce using rule 8 (command -> RETURN .)
    ID              reduce using rule 8 (command -> RETURN .)
    $end            reduce using rule 8 (command -> RETURN .)


state 10

    (9) command -> READ . readOption
    (95) readOption -> . LPAREN optionsIO RPAREN empty
    (96) readOption -> . LPAREN optionsIO RPAREN varlist
    LPAREN          shift and go to state 34

    readOption                     shift and go to state 33

state 11

    (10) command -> REAL . exprlist
    (43) exprlist -> . expr
    (44) exprlist -> . exprlist , expr
    (33) expr -> . variable
    (34) expr -> . RREAL
    (35) expr -> . INT
    (36) expr -> . LPAREN expr RPAREN
    (37) expr -> . MINUS expr
    (38) expr -> . expr EXPONENT expr
    (39) expr -> . expr DIVIDE expr
    (40) expr -> . expr TIMES expr
    (41) expr -> . expr MINUS expr
    (42) expr -> . expr PLUS expr
    (24) variable -> . ID
    (25) variable -> . ID LPAREN expr RPAREN
    (26) variable -> . ID LPAREN expr , expr RPAREN
    RREAL           shift and go to state 38
    INT             shift and go to state 39
    LPAREN          shift and go to state 40
    MINUS           shift and go to state 41
    ID              shift and go to state 7

    exprlist                       shift and go to state 35
    expr                           shift and go to state 36
    variable                       shift and go to state 37

state 12

    (11) command -> PAUSE . pauseOption
    (91) pauseOption -> . empty
    (92) pauseOption -> . INT
    (103) empty -> .
  ! shift/reduce conflict for INT resolved as shift
    INT             shift and go to state 44
    WRITE           reduce using rule 103 (empty -> .)
    SUBROUTINE      reduce using rule 103 (empty -> .)
    STOP            reduce using rule 103 (empty -> .)
    RETURN          reduce using rule 103 (empty -> .)
    READ            reduce using rule 103 (empty -> .)
    REAL            reduce using rule 103 (empty -> .)
    PAUSE           reduce using rule 103 (empty -> .)
    INTEGER         reduce using rule 103 (empty -> .)
    IF              reduce using rule 103 (empty -> .)
    GOTO            reduce using rule 103 (empty -> .)
    FUNCTION        reduce using rule 103 (empty -> .)
    FORMAT          reduce using rule 103 (empty -> .)
    END             reduce using rule 103 (empty -> .)
    DO              reduce using rule 103 (empty -> .)
    DIMMENSION      reduce using rule 103 (empty -> .)
    DATA            reduce using rule 103 (empty -> .)
    CONTINUE        reduce using rule 103 (empty -> .)
    CALL            reduce using rule 103 (empty -> .)
    ID              reduce using rule 103 (empty -> .)
    $end            reduce using rule 103 (empty -> .)

    pauseOption                    shift and go to state 42
    empty                          shift and go to state 43

state 13

    (12) command -> INTEGER . exprlist
    (43) exprlist -> . expr
    (44) exprlist -> . exprlist , expr
    (33) expr -> . variable
    (34) expr -> . RREAL
    (35) expr -> . INT
    (36) expr -> . LPAREN expr RPAREN
    (37) expr -> . MINUS expr
    (38) expr -> . expr EXPONENT expr
    (39) expr -> . expr DIVIDE expr
    (40) expr -> . expr TIMES expr
    (41) expr -> . expr MINUS expr
    (42) expr -> . expr PLUS expr
    (24) variable -> . ID
    (25) variable -> . ID LPAREN expr RPAREN
    (26) variable -> . ID LPAREN expr , expr RPAREN
    RREAL           shift and go to state 38
    INT             shift and go to state 39
    LPAREN          shift and go to state 40
    MINUS           shift and go to state 41
    ID              shift and go to state 7

    exprlist                       shift and go to state 45
    expr                           shift and go to state 36
    variable                       shift and go to state 37

state 14

    (13) command -> IF . LPAREN relexpr RPAREN ifOption
    LPAREN          shift and go to state 46


state 15

    (14) command -> GOTO . gotoOption
    (85) gotoOption -> . LPAREN intlist RPAREN , variable
    (86) gotoOption -> . ID
    (87) gotoOption -> . INT
    LPAREN          shift and go to state 48
    ID              shift and go to state 49
    INT             shift and go to state 50

    gotoOption                     shift and go to state 47

state 16

    (15) command -> FUNCTION . ID LPAREN varlist RPAREN
    ID              shift and go to state 51


state 17

    (16) command -> FORMAT . LPAREN formatOption RPAREN
    LPAREN          shift and go to state 52


state 18

    (17) command -> END .
    INT             reduce using rule 17 (command -> END .)
    WRITE           reduce using rule 17 (command -> END .)
    SUBROUTINE      reduce using rule 17 (command -> END .)
    STOP            reduce using rule 17 (command -> END .)
    RETURN          reduce using rule 17 (command -> END .)
    READ            reduce using rule 17 (command -> END .)
    REAL            reduce using rule 17 (command -> END .)
    PAUSE           reduce using rule 17 (command -> END .)
    INTEGER         reduce using rule 17 (command -> END .)
    IF              reduce using rule 17 (command -> END .)
    GOTO            reduce using rule 17 (command -> END .)
    FUNCTION        reduce using rule 17 (command -> END .)
    FORMAT          reduce using rule 17 (command -> END .)
    END             reduce using rule 17 (command -> END .)
    DO              reduce using rule 17 (command -> END .)
    DIMMENSION      reduce using rule 17 (command -> END .)
    DATA            reduce using rule 17 (command -> END .)
    CONTINUE        reduce using rule 17 (command -> END .)
    CALL            reduce using rule 17 (command -> END .)
    ID              reduce using rule 17 (command -> END .)
    $end            reduce using rule 17 (command -> END .)


state 19

    (18) command -> DO . doOption
    (70) doOption -> . INT variable ASSIGN INT , INT
    (71) doOption -> . INT variable ASSIGN INT , INT , INT
    INT             shift and go to state 54

    doOption                       shift and go to state 53

state 20

    (19) command -> DIMMENSION . dimmensionOption
    (66) dimmensionOption -> . ID LPAREN intlist RPAREN
    (67) dimmensionOption -> . dimmensionOption , ID LPAREN intlist RPAREN
    ID              shift and go to state 56

    dimmensionOption               shift and go to state 55

state 21

    (20) command -> DATA . dataOption
    (60) dataOption -> . varlist / datalist /
    (61) dataOption -> . dataOption , varlist / datalist /
    (27) varlist -> . variable
    (28) varlist -> . varlist , variable
    (24) variable -> . ID
    (25) variable -> . ID LPAREN expr RPAREN
    (26) variable -> . ID LPAREN expr , expr RPAREN
    ID              shift and go to state 7

    dataOption                     shift and go to state 57
    varlist                        shift and go to state 58
    variable                       shift and go to state 59

state 22

    (21) command -> CONTINUE .
    INT             reduce using rule 21 (command -> CONTINUE .)
    WRITE           reduce using rule 21 (command -> CONTINUE .)
    SUBROUTINE      reduce using rule 21 (command -> CONTINUE .)
    STOP            reduce using rule 21 (command -> CONTINUE .)
    RETURN          reduce using rule 21 (command -> CONTINUE .)
    READ            reduce using rule 21 (command -> CONTINUE .)
    REAL            reduce using rule 21 (command -> CONTINUE .)
    PAUSE           reduce using rule 21 (command -> CONTINUE .)
    INTEGER         reduce using rule 21 (command -> CONTINUE .)
    IF              reduce using rule 21 (command -> CONTINUE .)
    GOTO            reduce using rule 21 (command -> CONTINUE .)
    FUNCTION        reduce using rule 21 (command -> CONTINUE .)
    FORMAT          reduce using rule 21 (command -> CONTINUE .)
    END             reduce using rule 21 (command -> CONTINUE .)
    DO              reduce using rule 21 (command -> CONTINUE .)
    DIMMENSION      reduce using rule 21 (command -> CONTINUE .)
    DATA            reduce using rule 21 (command -> CONTINUE .)
    CONTINUE        reduce using rule 21 (command -> CONTINUE .)
    CALL            reduce using rule 21 (command -> CONTINUE .)
    ID              reduce using rule 21 (command -> CONTINUE .)
    $end            reduce using rule 21 (command -> CONTINUE .)


state 23

    (22) command -> CALL . callOption
    (54) callOption -> . EXIT callExit
    (55) callOption -> . ID LPAREN idList RPAREN
    EXIT            shift and go to state 61
    ID              shift and go to state 62

    callOption                     shift and go to state 60

state 24

    (23) command -> variable . ASSIGN expr
    ASSIGN          shift and go to state 63


state 25

    (2) program -> program statement .
    INT             reduce using rule 2 (program -> program statement .)
    WRITE           reduce using rule 2 (program -> program statement .)
    SUBROUTINE      reduce using rule 2 (program -> program statement .)
    STOP            reduce using rule 2 (program -> program statement .)
    RETURN          reduce using rule 2 (program -> program statement .)
    READ            reduce using rule 2 (program -> program statement .)
    REAL            reduce using rule 2 (program -> program statement .)
    PAUSE           reduce using rule 2 (program -> program statement .)
    INTEGER         reduce using rule 2 (program -> program statement .)
    IF              reduce using rule 2 (program -> program statement .)
    GOTO            reduce using rule 2 (program -> program statement .)
    FUNCTION        reduce using rule 2 (program -> program statement .)
    FORMAT          reduce using rule 2 (program -> program statement .)
    END             reduce using rule 2 (program -> program statement .)
    DO              reduce using rule 2 (program -> program statement .)
    DIMMENSION      reduce using rule 2 (program -> program statement .)
    DATA            reduce using rule 2 (program -> program statement .)
    CONTINUE        reduce using rule 2 (program -> program statement .)
    CALL            reduce using rule 2 (program -> program statement .)
    ID              reduce using rule 2 (program -> program statement .)
    $end            reduce using rule 2 (program -> program statement .)


state 26

    (4) statement -> INT command .
    INT             reduce using rule 4 (statement -> INT command .)
    WRITE           reduce using rule 4 (statement -> INT command .)
    SUBROUTINE      reduce using rule 4 (statement -> INT command .)
    STOP            reduce using rule 4 (statement -> INT command .)
    RETURN          reduce using rule 4 (statement -> INT command .)
    READ            reduce using rule 4 (statement -> INT command .)
    REAL            reduce using rule 4 (statement -> INT command .)
    PAUSE           reduce using rule 4 (statement -> INT command .)
    INTEGER         reduce using rule 4 (statement -> INT command .)
    IF              reduce using rule 4 (statement -> INT command .)
    GOTO            reduce using rule 4 (statement -> INT command .)
    FUNCTION        reduce using rule 4 (statement -> INT command .)
    FORMAT          reduce using rule 4 (statement -> INT command .)
    END             reduce using rule 4 (statement -> INT command .)
    DO              reduce using rule 4 (statement -> INT command .)
    DIMMENSION      reduce using rule 4 (statement -> INT command .)
    DATA            reduce using rule 4 (statement -> INT command .)
    CONTINUE        reduce using rule 4 (statement -> INT command .)
    CALL            reduce using rule 4 (statement -> INT command .)
    ID              reduce using rule 4 (statement -> INT command .)
    $end            reduce using rule 4 (statement -> INT command .)


state 27

    (5) command -> WRITE LPAREN . optionsIO RPAREN varlist
    (97) optionsIO -> . INT ' *
    (98) optionsIO -> . INT , *
    (99) optionsIO -> . ID ' INT
    (100) optionsIO -> . ID , INT
    (101) optionsIO -> . INT ' INT
    (102) optionsIO -> . INT , INT
    INT             shift and go to state 65
    ID              shift and go to state 66

    optionsIO                      shift and go to state 64

state 28

    (6) command -> SUBROUTINE ID . LPAREN varlist RPAREN
    LPAREN          shift and go to state 67


state 29

    (25) variable -> ID LPAREN . expr RPAREN
    (26) variable -> ID LPAREN . expr , expr RPAREN
    (33) expr -> . variable
    (34) expr -> . RREAL
    (35) expr -> . INT
    (36) expr -> . LPAREN expr RPAREN
    (37) expr -> . MINUS expr
    (38) expr -> . expr EXPONENT expr
    (39) expr -> . expr DIVIDE expr
    (40) expr -> . expr TIMES expr
    (41) expr -> . expr MINUS expr
    (42) expr -> . expr PLUS expr
    (24) variable -> . ID
    (25) variable -> . ID LPAREN expr RPAREN
    (26) variable -> . ID LPAREN expr , expr RPAREN
    RREAL           shift and go to state 38
    INT             shift and go to state 39
    LPAREN          shift and go to state 40
    MINUS           shift and go to state 41
    ID              shift and go to state 7

    expr                           shift and go to state 68
    variable                       shift and go to state 37

state 30
